[tool.poetry]
name = "easyathome-ble"
version = "0.1.0"
description = "Easy@Home BLE Devices"
authors = ["Robert Chmielowiec <robert+github@chmielowiec.net>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/chmielowiec/easyathome-ble"
documentation = "https://github.com/chmielowiec/easyathome-ble"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
packages = [
    { include = "easyathome_ble", from = "src" },
]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/chmielowiec/easyathome-ble/issues"
"Changelog" = "https://github.com/chmielowiec/easyathome-ble/blob/main/CHANGELOG.md"

[tool.poetry.dependencies]
python = ">=3.11,<4"
bleak = {version = ">=0.21.1", python = ">=3.10,<3.14"}
bleak-retry-connector = ">=3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3,<10.0"
pytest-cov = ">=6,<8"
pytest-asyncio = ">0.17"
ruff = ">=0.8.0"
mypy = ">=1.0"

[tool.semantic_release]
branch = "main"
version_toml = ["pyproject.toml:tool.poetry.version"]
version_variables = ["src/easyathome_ble/__init__.py:__version__"]
build_command = "pip install poetry && poetry build"

[tool.pytest.ini_options]
addopts = "-v -Wdefault --cov=easyathome_ble --cov-report=term-missing:skip-covered"
pythonpath = ["src"]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "@overload",
    "if TYPE_CHECKING",
    "raise NotImplementedError",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "A", "C4", "T20", "SIM"]
ignore = []

[tool.mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
mypy_path = "src/"
no_implicit_optional = true
warn_redundant_casts = true
warn_return_any = true
warn_unused_configs = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
